2009-02-21  Lars Hartmann  <lars (at) chaotika (dot) org>

	* include/xpak.h: Migrated the xpak code to an object based model.

	* src/liblpxpak.c: Migrated the xpak code to an object based model.

	* t/Makefile.am (check-syntax): added target for emacs flyspell.

2009-02-20  Lars Hartmann  <lars (at) chaotika (dot) org>

	* t/Makefile.am: replaced relative with absolute paths.

2009-02-19  Lars Hartmann  <lars (at) chaotika (dot) org>

	* doc/xpak.txt: grammar and typo fixes (thanks to Leonie Herzberg)

2009-02-16  Lars Hartmann  <lars (at) chaotika (dot) org>

	* src/liblpxpak.c (LPXPAK_INT_SIZE): added.
	replaced every occurence of "sizeof(lpxpak_int_t)" with
	LPXPAK_INT_SIZE.
	comments++.

	Updated Tests:
	* t/02_lpxpak_parse.c: does now work with distcheck
	* t/01_lpatom_parse.c: does now work with distcheck
	added error handling.
	* t/Makefile.am (AM_CPPFLAGS): added -g to CFLAGS

2009-02-12  Lars Hartmann  <lars (at) chaotika (dot) org>

	* src/liblpxpak.c: updated documentation.

	* .gitignore: added all the autotools generated stuff plus the
	stuff that gets produced during compile-time.

2009-02-11  Lars Hartmann  <lars (at) chaotika (dot) org>

	* src/liblpxpak.c (lpxpak_indexblob_compile): fixed typo.

2009-02-10  Lars Hartmann  <lars (at) chaotika (dot) org>

	* configure.ac: added check for some headers and functions.
	* src/liblpxpak.c: #include memory.h if existant.
	* src/liblputil.c: #include memory.h if existant.

2009-02-09  Lars Hartmann  <lars (at) chaotika (dot) org>

	* include/liblpatom.h: renamed to atom.h
	* include/liblpcommon.h: renamed to common.h
	* include/liblputil.h: renamed to util.h
	* include/liblpxpak.h: renamed to xpak.h

2009-02-08  Lars Hartmann  <lars (at) chaotika (dot) org>

	* TODO: updated.

	Migrating tests to Autotools:
	* t/: cleaned up.
	* Makefile.am (SUBDIRS): added t/.
	* configure.ac (AC_CONFIG_FILES): added t/Makefile.
	* t/01_lpatom_parse.c: modified to fit new filenames and to be silent.