@@ -5,13 +5,13 @@ TESTS = 01_lpatom_parse 02_lpxpak_parse
 
 01_lpatom_parse_SOURCES = 01_lpatom_parse.c 01_lpatom_parse.txt
 01_lpatom_parse_LDFLAGS = $(all_libraries)
-01_lpatom_parse_LDADD = $(top_srcdir)/src/libportage.la
+01_lpatom_parse_LDADD = ../src/libportage.la
 
 02_lpxpak_parse_SOURCES = 02_lpxpak_parse.c 02_lpxpak_parse.tbz2
 02_lpxpak_parse_LDFLAGS = $(all_libraries)
-02_lpxpak_parse_LDADD = $(top_srcdir)/src/libportage.la
+02_lpxpak_parse_LDADD = ../src/libportage.la
 
-AM_CPPFLAGS = -I$(top_srcdir)/include -g
+AM_CPPFLAGS = -I$(top_srcdir)/include
 
 # dev-targets
 check-syntax:
